--- a/src/Mapbender/CoreBundle/Resources/translations/messages.ru.yml
+++ b/src/Mapbender/CoreBundle/Resources/translations/messages.ru.yml
@@ -157,6 +157,7 @@ mb:
     gpsposition:
       error:
         notsupported: 'Извините, но геолокационные сервисы не поддерживаются вашим браузером.'
+        nosignal: Невозможно определить ваше местоположение.
       class:
         title: GPS-положение
         description: 'Отображает кнопку, чтобы показать позицию GPS'
