--- a/src/Mapbender/CoreBundle/Resources/translations/messages.en.yml
+++ b/src/Mapbender/CoreBundle/Resources/translations/messages.en.yml
@@ -159,7 +159,8 @@ mb:
           ok: Close
     gpsposition:
       error:
-        notsupported: 'I''m sorry, but geolocation services are not supported by your browser.'
+        notsupported: I'm sorry, but geolocation services are not supported by your browser.
+        nosignal: Currently it's not posible to locate your position.
       class:
         title: 'GPS Position'
         description: 'Renders a button to show the GPS Position'
