--- a/src/Mapbender/CoreBundle/Resources/translations/messages.es.yml
+++ b/src/Mapbender/CoreBundle/Resources/translations/messages.es.yml
@@ -157,6 +157,7 @@ mb:
     gpsposition:
       error:
         notsupported: 'Lo siento, pero los servicios de geolocalización no son soportados por su navegador.'
+        nosignal: Actualmente no es posible localizar su posición.
       class:
         title: 'Posición GPS'
         description: 'Renders un botón para mostrar la Posición del GPS'
