change styles for text

--- a/src/Mapbender/CoreBundle/Resources/translations/messages.ru.yml
+++ b/src/Mapbender/CoreBundle/Resources/translations/messages.ru.yml
@@ -358,6 +358,8 @@ mb:
         text:
           title: Текст
           label: Текст
+          error:
+            notext: 'Text required'
       geometry:
         action:
           remove: 'Удалить геометрию'
