--- a/src/Mapbender/CoreBundle/Resources/translations/messages.it.yml
+++ b/src/Mapbender/CoreBundle/Resources/translations/messages.it.yml
@@ -353,6 +353,8 @@ mb:
         text:
           title: Text
           label: Text
+          error:
+            notext: 'Text required'
       geometry:
         action:
           remove: 'Remove geometry'
