Fix and refactor simple search element. Closes: #409

--- a/src/Mapbender/CoreBundle/Resources/translations/messages.de.yml
+++ b/src/Mapbender/CoreBundle/Resources/translations/messages.de.yml
@@ -19,6 +19,9 @@ mb:
       class:
         title: 'Einfache Suche'
         description: 'Einfeldsuche über JSON-Daten (z.B. Solr)'
+      error:
+        geometry:
+          missing: Der ausgewählte Eintrag enthält keine Geometrie.
     searchrouter:
       popup:
         btn:
