--- a/src/Mapbender/CoreBundle/Resources/translations/messages.pt.yml
+++ b/src/Mapbender/CoreBundle/Resources/translations/messages.pt.yml
@@ -339,6 +339,9 @@ mb:
         description: 'Pesquisa simples sobre dados de JSON (p. ex. Solr)'
       input:
         search: Procurar
+      error:
+        geometry:
+          missing: The selected entry does not contain a geometry.
     htmlelement:
       class:
         title: HTML
