--- a/src/Mapbender/CoreBundle/Resources/translations/messages.ru.yml
+++ b/src/Mapbender/CoreBundle/Resources/translations/messages.ru.yml
@@ -34,7 +34,10 @@ mb:
         search: Поиск
       class:
         title: 'Простой Поиск'
-        description: 'Одно поле поиска на json источников (например Solr)'
+        description: 'Поле поиска источников (например Solr)'
+      error:
+        geometry:
+          missing: Выбраный объект не содержит геометрии.
     searchrouter:
       popup:
         btn:
